--- a/assets/style.css
+++ b/assets/style.css
@@ -94,19 +94,9 @@ p {
 
 #imagecontainer1 {
      margin-bottom: 10px;
-     position: relative;
   }
   
-.caption {
-    position: absolute;
-    top: 70%;
-    left: 0;
-    width: 100%;
-    color: white;
-    background: teal;
-    height: 40px;
-    padding: 0px;
-}
+
   
 #imagecontainer2 {
     margin-bottom: 10px;
@@ -127,7 +117,17 @@ p {
     margin-bottom: 10px;
   }
   
-  /* .portfolio-img {
+  .caption {
+    position: absolute;
+    top: 70%;
+    left: 0;
+    width: 100%;
+    color: white;
+    background: teal;
+    height: 40px;
+    padding: 0px;
+}
+  .portfolio-img {
     display: block;
     color: white;
     text-align: center;
@@ -139,4 +139,9 @@ p {
     clear: both;
     margin-top: 60%;
     text-decoration: none;  
+  }
+
+  /* #img-holder {
+      width: 100%;
+      height: 200px;
   } */
