--- a/assets/style.css
+++ b/assets/style.css
@@ -141,6 +141,15 @@ p {
     text-decoration: none;  
   }
 
+  h5 {
+      background: teal;
+      text-align: center;
+      margin-top: 70%;
+      margin-right: 10%;
+      width: 100%;
+      padding: 2%;
+  }
+
   /* #img-holder {
       width: 100%;
       height: 200px;
