--- a/assets/style.css
+++ b/assets/style.css
@@ -150,6 +150,10 @@ p {
       padding: 2%;
   }
 
+  .card-img-overlay {
+      padding: 0px;
+  }
+
   /* #img-holder {
       width: 100%;
       height: 200px;
