--- a/assets/style.css
+++ b/assets/style.css
@@ -158,3 +158,9 @@ p {
       width: 100%;
       height: 200px;
   } */
+
+  @media (max-width: 768px){
+    .container {
+        height: 2800px;
+    }
+    }
